# tramex

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  rust-toolchain  typos.toml
.cargo/: config.toml
.github/workflows/: deploy.yml  tests.yml  typos.yml  wasm.yml
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  asn1.md  chapter_1.md  ci_cd.md  contributors.md  development.md  documentation.md  introduction.md  knowledge_base.md  user_guide.md
docs/src/amarisoft-resources/: index.md  log_file_format.md
docs/src/amarisoft-ressources/: index.md
src/: app.rs  main.rs
src/panels/: file_handler.rs  logical_channels.rs  message.rs  mod.rs  socket_manager.rs
tramex/: Cargo.toml  index.html
tramex-tools/: Cargo.toml  README.md  dev-report.MD
tramex-tools/amarisoft-ressources/: log_file_format.MD
tramex-tools/src/: connector.rs  data.rs  errors.rs  file_handler.rs  functions.rs  interface.rs  lib.rs  rrc.rs
tramex-tools/src/interface/: functions.rs  interface.rs  interface_types.rs  layer.rs  log_get.rs  mod.rs  onelog.rs  types.rs
tramex-tools/src/interface/file_handler/: file_handler.rs
tramex-tools/src/interface/interface_file/: file_handler.rs  mod.rs  parser.rs  parser_rrc.rs  utils_file.rs
tramex-tools/src/interface/parser/: mod.rs  parser_rrc.rs
tramex-tools/src/interface/websocket/: mod.rs  ws_connection.rs
tramex-tools/src/types/: file_handler.rs  internals.rs  mod.rs  websocket_types.rs
tramex-tools/src/websocket/: layer.rs  log_get.rs  mod.rs  onelog.rs  types.rs  ws_connection.rs
tramex-tools/tests/: tests_connector.rs  tests_deserialize.rs
tramex/assets/: manifest.json  sw.js
tramex/src/: app.rs  frontend.rs  lib.rs  main.rs  utils.rs
tramex/src/handlers/: handler_file.rs  handler_ws.rs  mod.rs
tramex/src/panels/: about.rs  file_handler.rs  file_upload.rs  functions_panels.rs  handler_file.rs  handler_ws.rs  logical_channels.rs  message.rs  mod.rs  panel_message.rs  rrc_status.rs  socket_manager.rs  trame_manager.rs
