[package]
name = "tramex-tools"
version = "0.1.0"
edition = "2021"
authors = ["n4n5 <its.just.n4n5@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1-codecs = "0.6.1"
asn1_codecs_derive = "0.6.1"
bitvec = "1.0.1"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.20"
serde_json = "1.0.114"
regex = "1.10.4"
ewebsock = "0.5.0"
chrono = "0.4.38"
