[package]
name = "tramex"
version = "0.1.0"
edition = "2021"
description = "Tramex is a 4G frame analyser"
license = "GPL-3.0"
authors = [
    "n4n5 <its.just.n4n5@gmail.com>",
    "Sacha Di Costanzo <sacha.dicostanzo@telecom-paris.fr>",
    "katheleligaf",
    "comeyrd <ce.eyraud@gmail.com>",
]
repository = "https://github.com/tramex/tramex"
homepage = "https://tramex.github.io/tramex"
readme = "README.md"
keywords = ["frame", "4G", "LTE"]
categories = ["visualization", "network-programming"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

## Test the tokio backend:
tokio = ["ewebsock/tokio", "dep:tokio"]


[dependencies]
ewebsock = { version = "0.5.0", features = ["tls"] }
egui = "0.27.2"
eframe = { version = "0.27.2", default-features = true, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "ron",
] }
log = "0.4"
serde_json = "1.0.113"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
rfd = "0.14.0"
poll-promise = { version = "0.3.0", features = ["web"] }
tramex-tools = { path = "../tramex-tools" }
ehttp = { version = "0.5.0" }
types_lte_3gpp = "1.0.3"
asn1-codecs = "0.6.1"
# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.16", optional = true, features = [
    "macros",
    "rt-multi-thread",
] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.4" }
